--- a/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
+++ b/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
@@ -71,3 +71,10 @@
 ### 7. JDK와 JRE의 차이
 ---
 
+___
+___
+#### REFERENCE
+> + Tistory - JVM 내부 구조 & 메모리 영역 💯 총정리 : https://inpa.tistory.com/entry/JAVA-%E2%98%95-JVM-%EB%82%B4%EB%B6%80-%EA%B5%AC%EC%A1%B0-%EB%A9%94%EB%AA%A8%EB%A6%AC-%EC%98%81%EC%97%AD-%EC%8B%AC%ED%99%94%ED%8E%B8
+> + [1주차] JVM은 무엇이며 자바 코드는 어떻게 실행하는 것인가. : https://catsbi.oopy.io/df0df290-9188-45c1-b056-b8fe032d88ca
+> + Velog - [1주차] JVM은 무엇이며 자바 코드는 어떻게 실행하는 것인가 : https://velog.io/@roro/1%EC%A3%BC%EC%B0%A8-JVM%EC%9D%80-%EB%AC%B4%EC%97%87%EC%9D%B4%EB%A9%B0-%EC%9E%90%EB%B0%94-%EC%BD%94%EB%93%9C%EB%8A%94-%EC%96%B4%EB%96%BB%EA%B2%8C-%EC%8B%A4%ED%96%89%ED%95%98%EB%8A%94-%EA%B2%83%EC%9D%B8%EA%B0%80
+> + Tistory - [Java-3] JVM과 JIT 컴파일러란? : https://catch-me-java.tistory.com/11
