--- a/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
+++ b/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
@@ -33,7 +33,7 @@
 <br>
   <p align="center"><img src="https://github.com/SeungTaeGit/ComputerScience/assets/129585999/6e724309-1a75-446d-a980-2b14f225b067"></p>
   
-  #### * Java 컴파일 및 실행 과정
+  #### Java 컴파일 및 실행 과정
     1) 개발자가 자바 소스코드(.java)를 작성.   (.java 파일 생성)
     2) 자바 컴파일러가 자바 소스코드(.java)파일을 읽어 바이트코드(.class)코드로 컴파일.  (.java -> .class 파일 생성)
       -> 이 단계에서 생성된 .class파일은 OS가 아직 이해하지 못하는 코드로 구성.
@@ -50,26 +50,35 @@
 <br>
 
 
-### 5. JIT(Just In Time) 컴파일러란 무엇이며 어떻게 동작하는지
+### * JIT(Just In Time) 컴파일러란 무엇이며 어떻게 동작하는지
 ---
 **- Java는 인터프린터 방식과 컴파일 방식 2가지를 모두 사용하는 언어다.** <br>
- * Java의 인터프린터 방식 : 바이트코드를 인터프린터.<br>
- * Java의 컴파일 방식 : 바이트코드로 컴파일.<br>
+ * Java의 인터프린터 방식 : 바이트코드를 인터프린터. (이 부분에서 JIT 컴파일러 사용)<br>
+ * Java의 컴파일 방식 : 바이트코드로 컴파일. (Java 컴파일러 사용)<br>
 
 > 인터프린터 방식 : 소스코드를 빌드시에 암것도 하지 않다가, 런타임시에 한줄 한줄 읽어가며 변환.<br>
 > 컴파일 방식 : 소스코드를 한꺼번에 컴퓨터가 읽을 수 있는 native machine (기계)어로 변환.<br>
 
-<br>
+  ### JIT Compiler
+  - **프로그램을 실제 실행하는 시점에 (실시간에) 기계어로 번역하는 컴파일 기법.**
+  - JIT 컴파일러는 바이트코드를 인터프린터 방식으로 컴파일하다 적절한 시점에 바이트코드 전체를 네이티브 코드로 변경. <br>
+    (이때 네이티브 코드는 캐시에 저장)
+  - 변경된 네이티브 코드는 캐시에 저장하기 때문에 한 번 컴파일된 코드를 재사용할 경우 빠른 명령 수행이 가능.
+
+  
+<br><br>
 
 
 ### 6. JVM 구성 요소
 ---
+  **JVM(Java Virtual Machine) 구성**
   <p align="center"><img src="https://github.com/SeungTaeGit/ComputerScience/assets/129585999/b157e002-c26b-467e-a655-0373e0f70652"></p>
 <br>
 
 
 ### 7. JDK와 JRE의 차이
 ---
+
 
 ___
 ___
