--- a/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
+++ b/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
@@ -12,7 +12,7 @@
 <br>
 
 
-### * JVM이란 무엇인가
+### 1. JVM이란 무엇인가
 ---
   - JVM(Java Virtual Machine) 자바 가상 머신을 줄여 부르는 용어이다.
   - OS와 JAVA Application 사이에서 중재자 역할을 한다.
@@ -26,7 +26,7 @@
 <br>
 
 
-### * 컴파일 및 실행하는 방법
+### 2. 컴파일 및 실행하는 방법
 ---
   - Compile : 사람이 읽기 쉬운 소스 코드를 컴퓨터가 읽기 쉽게 변환해주는 개념.
   - Java 컴파일의 경우 사람이 작성한 프로그래밍 코드를 JVM이 이해할 수 있는 수준으로 변환하는 작업.
@@ -41,7 +41,7 @@
 <br><br>
 
 
-### * 바이트코드란 무엇인가
+### 3. 바이트코드란 무엇인가
 ---
   - JAVA 컴파일 과정에서 생성되는 .class 파일.
   - 자바 가상머신(JVM)이 실행하는 명령어의 형태.
@@ -50,33 +50,81 @@
 <br>
 
 
-### * JIT(Just In Time) 컴파일러란 무엇이며 어떻게 동작하는지
+### 4. JIT(Just In Time) 컴파일러란 무엇이며 어떻게 동작하는지
 ---
-**- Java는 인터프린터 방식과 컴파일 방식 2가지를 모두 사용하는 언어다.** <br>
- * Java의 인터프린터 방식 : 바이트코드를 인터프린터. (이 부분에서 JIT 컴파일러 사용)<br>
+**- Java는 인터프리터 방식과 컴파일 방식 2가지를 모두 사용하는 언어다.** <br>
+ * Java의 인터프리터 방식 : 바이트코드를 인터프리터. (이 부분에서 JIT 컴파일러 사용)<br>
  * Java의 컴파일 방식 : 바이트코드로 컴파일. (Java 컴파일러 사용)<br>
 
-> 인터프린터 방식 : 소스코드를 빌드시에 암것도 하지 않다가, 런타임시에 한줄 한줄 읽어가며 변환.<br>
+> 인터프리터 방식 : 소스코드를 빌드시에 암것도 하지 않다가, 런타임시에 한줄 한줄 읽어가며 변환.<br>
 > 컴파일 방식 : 소스코드를 한꺼번에 컴퓨터가 읽을 수 있는 native machine (기계)어로 변환.<br>
+
+<p align="center"><img src="https://github.com/SeungTaeGit/ComputerScience/assets/129585999/e96c215c-cf24-4e52-b2b8-711b22a1d6d6"></p>
 
   ### JIT Compiler
   - **프로그램을 실제 실행하는 시점에 (실시간에) 기계어로 번역하는 컴파일 기법.**
-  - JIT 컴파일러는 바이트코드를 인터프린터 방식으로 컴파일하다 적절한 시점에 바이트코드 전체를 네이티브 코드로 변경. <br>
+  - JIT 컴파일러는 바이트코드를 인터프리터 방식으로 컴파일하다 적절한 시점에 바이트코드 전체를 네이티브 코드로 변경. <br>
     (이때 네이티브 코드는 캐시에 저장)
   - 변경된 네이티브 코드는 캐시에 저장하기 때문에 한 번 컴파일된 코드를 재사용할 경우 빠른 명령 수행이 가능.
 
+<br><br>
+
+
+### 5. JVM 구성 요소
+---
+  **OS 및 JVM 동작 방식**
+  1) 자바 프로그램을 실행하면 JVM은 OS로부터 메모리를 할당받는다.
+  2) 자바 컴파일러(javac)가 자바 소스코드(.java)를 자바 바이트 코드(.class)로 컴파일 한다.
+  3) Class Loader는 동적 로딩을 통해 필요한 클래스들을 로딩 및 링크 하여 Runtime Data Area(실질적인 메모리를 할당 받아 관리하는 영역)에 올린다.
+  4) Runtime Data Area에 로딩 된 바이트 코드는 Execution Engine을 통해 해석된다.
+  5) 이 과정에서 Execution Engine에 의해 Garbage Collector의 작동과 Thread 동기화가 이루어진다.
+<br>
+
+  **JVM(Java Virtual Machine) 구조**<br>
+  JVM 동작 과정 중 Class Loader ↔ Execution Engine ↔ Runtime Data Area 부분을 상세히 표현한 그림.
+  <p align="center"><img src="https://github.com/SeungTaeGit/ComputerScience/assets/129585999/b157e002-c26b-467e-a655-0373e0f70652"></p>
+<br>
+
+  보기와 같이 **JVM(Java Virtual Machine) 구성**은
+  * 클래스 로더(Class Loader)
+  * 실행 엔진(Execution Engine)
+      * JIT 컴파일러(JIT Compiler)
+      * 인터프리터(Interpreter)
+      * 가비지 콜렉터(Garbage collector)
+  * 런타임 데이터 영역(Runtime Data Area)
+      * 메소드 영역(Method Area)
+      * 힙 영역(Heap)
+      * PC Register
+      * JVM 스택(JVM Stack)
+      * 네이티브 메소드(Native Method Stack)
+  * 네이티브 메소드 인터페이스 (Native Medthod Interface)
+  * 네이티브 메소드 라이브러리 (Native Method Library)로 이루어진다.
+<br>
+
+  ### Class Loader
+    JVM 내로 클래스 파일(*.class)을 동적으로 로드하고, 링크를 통해 배치하는 작업을 수행하는 모듈.
+    클래스 파일의 로딩 순서는 다음과 같이 3단계로 구성.
+  ### Execution Engine
+  **JIT Compiler**<br>
+  **Interpreter**<br>
+  **Garbage collector**<br>
+
+  ### Runtime Data Area
+    JVM의 메모리 영역.
+  **Method Area**<br>
+  **Heap**<br>
+  **PC Register**<br>
+  **JVM Stack**<br>
+  **Native Method Stack**<br>
+
+  ### Native Medthod Interface
+  
+  ### Native Method Library
   
 <br><br>
 
 
-### 6. JVM 구성 요소
----
-  **JVM(Java Virtual Machine) 구성**
-  <p align="center"><img src="https://github.com/SeungTaeGit/ComputerScience/assets/129585999/b157e002-c26b-467e-a655-0373e0f70652"></p>
-<br>
-
-
-### 7. JDK와 JRE의 차이
+### 6. JDK와 JRE의 차이
 ---
 
 
