Update 자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md

--- a/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
+++ b/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
@@ -102,15 +102,28 @@
 <br>
 
   ### Class Loader
-    JVM 내로 클래스 파일(*.class)을 동적으로 로드하고, 링크를 통해 배치하는 작업을 수행하는 모듈.
-    클래스 파일의 로딩 순서는 다음과 같이 3단계로 구성.
+    - JVM 내로 클래스 파일(*.class)을 동적으로 로드하고, 링크를 통해 배치하는 작업을 수행하는 모듈.
+    - 클래스 파일의 로딩 순서는 Loading(로드) → Linking(링크) → Initialization(초기화) 3단계로 구성.
+  <p align="center"><img src="https://github.com/SeungTaeGit/ComputerScience/assets/129585999/3713ed10-662a-46a7-ba1f-803ee31b53f4"></p>
+  
+  **Loading(로드)** : .class 파일을 읽어들여 JVM의 메모리에 로드.<br><br>
+  
+  **Link(링크)** : 로드한 .class 파일을 검증.<br>
+  * Verify(검증) : .class 파일의 유효성 체크<br>
+  * Prepare(준비) : 클래스 변수와 기본값에 필요한 메모리 할당<br>
+  * Resolve(분석) : 클래스의 상수 풀 내 모든 심볼릭 레퍼런스를 다이렉트 레퍼런스로 변경<br><br>
+  
+  **Initialization(초기화)** : 클래스 내의 변수들을 적절한 값으로 초기화.
+<br><br><br>
+  
   ### Execution Engine
   **JIT Compiler**<br>
   **Interpreter**<br>
   **Garbage collector**<br>
 
   ### Runtime Data Area
-    JVM의 메모리 영역.
+    - JVM의 메모리 영역.
+    - 
   **Method Area**<br>
   **Heap**<br>
   **PC Register**<br>
