Update 자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md

--- a/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
+++ b/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
@@ -117,18 +117,22 @@
 <br><br><br>
   
   ### Execution Engine
+    - 클래스 로더를 통해 런타임 데이터 영역에 배치된 바이트 코드를 명령어 단위로 읽어서 실행.
   **JIT Compiler**<br>
   **Interpreter**<br>
   **Garbage collector**<br>
 
   ### Runtime Data Area
     - JVM의 메모리 영역.
-    - 
-  **Method Area**<br>
-  **Heap**<br>
-  **PC Register**<br>
-  **JVM Stack**<br>
-  **Native Method Stack**<br>
+    - 자바 애플리케이션을 실행할 때 사용되는 데이터들을 적재하는 영역.
+  <p align="center"><img src="https://github.com/SeungTaeGit/ComputerScience/assets/129585999/7f336c42-c5a2-4a59-bd8d-2fd32aee00ff"></p>
+  
+  **Method Area** : 클래스 멤버 변수의 이름, 데이터 타입, 접근 제어자 정보와 같은 각종 필드 정보들과 메서드 정보, 데이터 Type 정보, Constant Pool, static변수, final class 등이 생성되는 영역.<br>
+  **Heap** : new 키워드로 생성된 객체와 배열이 생성되는 영역. 
+              주기적으로 GC가 제거하는 영역.<br>
+  **PC Register** : Thread가 생성될 때마다 생성되는 영역으로 프로그램 카운터, 즉 현재 스레드가 실행되는 부분의 주소와 명령을 저장하고 있는 영역.<br>
+  **JVM Stack** : 지역변수, 파라미터, 리턴 값, 연산에 사용되는 임시 값 등이 생성되는 영역.<br>
+  **Native Method Stack** : 자바 외 언어로 작성된 네이티브 코드를 위한 메모리 영역.<br>
 
   ### Native Medthod Interface
   
