--- a/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
+++ b/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
@@ -101,42 +101,46 @@
   * 네이티브 메소드 라이브러리 (Native Method Library)로 이루어진다.
 <br>
 
-  ### Class Loader
+  #### Class Loader
     - JVM 내로 클래스 파일(*.class)을 동적으로 로드하고, 링크를 통해 배치하는 작업을 수행하는 모듈.
     - 클래스 파일의 로딩 순서는 Loading(로드) → Linking(링크) → Initialization(초기화) 3단계로 구성.
   <p align="center"><img src="https://github.com/SeungTaeGit/ComputerScience/assets/129585999/3713ed10-662a-46a7-ba1f-803ee31b53f4"></p>
   
-  **Loading(로드)** : .class 파일을 읽어들여 JVM의 메모리에 로드.<br><br>
+>  **Loading(로드)** : .class 파일을 읽어들여 JVM의 메모리에 로드.<br><br>
+>  **Link(링크)** : 로드한 .class 파일을 검증.<br>
+>  * Verify(검증) : .class 파일의 유효성 체크<br>
+>  * Prepare(준비) : 클래스 변수와 기본값에 필요한 메모리 할당<br>
+>  * Resolve(분석) : 클래스의 상수 풀 내 모든 심볼릭 레퍼런스를 다이렉트 레퍼런스로 변경<br>
+>
+>  **Initialization(초기화)** : 클래스 내의 변수들을 적절한 값으로 초기화.
+<br>
   
-  **Link(링크)** : 로드한 .class 파일을 검증.<br>
-  * Verify(검증) : .class 파일의 유효성 체크<br>
-  * Prepare(준비) : 클래스 변수와 기본값에 필요한 메모리 할당<br>
-  * Resolve(분석) : 클래스의 상수 풀 내 모든 심볼릭 레퍼런스를 다이렉트 레퍼런스로 변경<br><br>
-  
-  **Initialization(초기화)** : 클래스 내의 변수들을 적절한 값으로 초기화.
-<br><br><br>
-  
-  ### Execution Engine
+  #### Execution Engine
     - 클래스 로더를 통해 런타임 데이터 영역에 배치된 바이트 코드를 명령어 단위로 읽어서 실행.
-  **JIT Compiler**<br>
-  **Interpreter**<br>
-  **Garbage collector**<br>
+    - 바이트 코드를 운영체제에 맞게 해석해주는 역할 수행.
+>  **JIT Compiler** : 자주 실행되는 바이트 코드 영역을 런타임 중에 기계어로 컴파일하여 사용.<br><br>
+>  **Interpreter** : 바이트 코드를 읽고(read), 운영체제가 실행할 수 있도록 기계어로 변경하는 역할 수행.<br><br>
+>  **Garbage collector** : Runtime Data Area의 Heap 메모리 영역에서 더는 사용하지 않는 메모리를 자동으로 회수.<br>
+<br>
 
-  ### Runtime Data Area
+  #### Runtime Data Area
     - JVM의 메모리 영역.
     - 자바 애플리케이션을 실행할 때 사용되는 데이터들을 적재하는 영역.
   <p align="center"><img src="https://github.com/SeungTaeGit/ComputerScience/assets/129585999/7f336c42-c5a2-4a59-bd8d-2fd32aee00ff"></p>
   
-  **Method Area** : 클래스 멤버 변수의 이름, 데이터 타입, 접근 제어자 정보와 같은 각종 필드 정보들과 메서드 정보, 데이터 Type 정보, Constant Pool, static변수, final class 등이 생성되는 영역.<br>
-  **Heap** : new 키워드로 생성된 객체와 배열이 생성되는 영역. 
-              주기적으로 GC가 제거하는 영역.<br>
-  **PC Register** : Thread가 생성될 때마다 생성되는 영역으로 프로그램 카운터, 즉 현재 스레드가 실행되는 부분의 주소와 명령을 저장하고 있는 영역.<br>
-  **JVM Stack** : 지역변수, 파라미터, 리턴 값, 연산에 사용되는 임시 값 등이 생성되는 영역.<br>
-  **Native Method Stack** : 자바 외 언어로 작성된 네이티브 코드를 위한 메모리 영역.<br>
+>  **Method Area** : 클래스 멤버 변수의 이름, 데이터 타입, 접근 제어자 정보와 같은 각종 필드 정보들과 메서드 정보, 데이터 Type 정보, Constant Pool, static변수, final class 등이 생성되는 영역.<br><br>
+>  **Heap** : new 키워드로 생성된 객체와 배열이 생성되는 영역. 주기적으로 GC가 제거하는 영역.<br><br>
+>  **PC Register** : Thread가 생성될 때마다 생성되는 영역으로 프로그램 카운터, 즉 현재 스레드가 실행되는 부분의 주소와 명령을 저장하고 있는 영역.<br><br>
+>  **JVM Stack** : 지역변수, 파라미터, 리턴 값, 연산에 사용되는 임시 값 등이 생성되는 영역.<br><br>
+>  **Native Method Stack** : 자바 외 언어로 작성된 네이티브 코드를 위한 메모리 영역.<br>
+<br>
 
-  ### Native Medthod Interface
-  
-  ### Native Method Library
+  #### Native Medthod Interface
+    - 자바가 다른 언어로 만들어진 어플리케이션과 상호 작용할 수 있는 인터페이스 제공하는 프로그램.
+    - JVM이 Native Method를 적재하고 수행할수 있도록 도움.
+  #### Native Method Library
+    - C, C++로 작성된 라이브러리.
+    - 헤더가 필요하면 JNI는 이 라이브러리를 로딩해 실행.
   
 <br><br>
 
