Update 자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md

--- a/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
+++ b/JAVA/자바 소스 파일(.java)을 JVM으로 실행하는 과정 이해하기.md
@@ -147,6 +147,15 @@
 
 ### 6. JDK와 JRE의 차이
 ---
+  #### JRE
+    - Java Runtime Environment. 자바 실행 환경.
+    - JVM 뿐만 아니라 Java binaries, Java 클래스 라이브러리 등을 포함.
+  #### JDK
+    - Java Development Kit. 자바 개발 키트.
+    - 자바 애플리케이션을 개발하기 위한 환경 지원.
+    - JRE를 포함할 뿐만 아니라 컴파일러(javac), javadoc, jar 등 개발에 유용한 도구들을 포함.
+    
+<p align="center"><img src="https://github.com/SeungTaeGit/ComputerScience/assets/129585999/0899f808-a74a-4831-91b9-a3ec09f0bafe"></p>
 
 
 ___
