--- a/Operating System/운영체제.md
+++ b/Operating System/운영체제.md
@@ -1,8 +1,30 @@
 
 ### 운영체제란?
-- 컴퓨터 시스템의 핵심 소프트웨어.
+---
+- **OS**, Operating System 의 약자.
+- 컴퓨터 시스템의 자원을 효율적으로 관리.
+- 다른 응용 프로그램의 유용한 작업 도움.
+- 컴퓨터 시스템의 **핵심** 소프트웨어.
+- **사용자의 편리하고 효과적인 컴퓨터 사용을 위한 환경을 조성 및 제공**하는 시스템 소프트웨어.
+<br>
 
 
 ### 운영체제의 역할
+---
+- 사용자와 하드웨어 사이의 인터페이스를 제공해 효율적인 응용 프로그램 동작을 지원하기 위한 역할이 있다.
+
+#### 프로세스 관리
+#### 저장장치 관리
+#### 네트워킹
+#### 오류 처리
+#### 시스템 보안
+<br>
+
 
 ### 운영체제의 종류
+---
+#### 윈도우(Window)
+#### 유닉스(UNIX)
+#### 리눅스(Linux)
+#### 맥(MacOS)
+<br>
