--- a/Operating System/운영체제.md
+++ b/Operating System/운영체제.md
@@ -24,7 +24,14 @@
 ### 운영체제의 종류
 ---
 #### 윈도우(Window)
+- Microsoft사에서 개발한 운영체제로, **노트북 및 서버 시스템**에서 주로 사용.
 #### 유닉스(UNIX)
+- 높은 안전성과 신뢰성을 바탕으로 **서버 환경**에서 주로 사용하며, 다중 사용자 및 다중 작업 지원.
 #### 리눅스(Linux)
+- 오픈 소스 운영체제.
+- 다양한 배포판 존재.
+- **서버 시스템 및 임베디드 시스템**에서 주로 사용.
+- 높은 보안성.
 #### 맥(MacOS)
+- Apple사에서 개발한 운영체제로, **Mac 컴퓨터 및 노트북**에서 사용.
 <br>
