--- a/Operating System/운영체제.md
+++ b/Operating System/운영체제.md
@@ -11,10 +11,18 @@
 
 ### 운영체제의 역할
 ---
-- 사용자와 하드웨어 사이의 인터페이스를 제공해 효율적인 응용 프로그램 동작을 지원하기 위한 역할이 있다.
+> 사용자와 하드웨어 사이의 인터페이스를 제공해 효율적인 응용 프로그램 동작을 지원하기 위한 역할이 있다.
 
 #### 프로세스 관리
+- 현재 실행 중인 프로그램을 뜻하는 **프로세스**의 생성 및 실행, 대기, 일시 정지, 중지 등의 상태를 관리.
+- 프로세스를 **CPU** 에 적재 및 점유하는 방식으로 관리.
+- 프로세스 간 자원 공유 등을 관리.
 #### 저장장치 관리
+- **컴퓨터 시스템의 하드웨어 자원**을 효율적으로 관리.
+- 1차 저장장치인 **Main Memory** 에 프로세스에 할당할 메모리 영역 관리.
+> **+** 가상 메모리 활용 및 각 영역 침범 방지.
+- 2차 저장창치인 **SSD, HDD** 등에 **파일 형식**으로 데이터 저장.
+> FAT, NTFS, EXT2, JFS, XFS 등 많은 파일 시스템 존재.
 #### 네트워킹
 #### 오류 처리
 #### 시스템 보안
