--- a/Operating System/운영체제.md
+++ b/Operating System/운영체제.md
@@ -24,8 +24,18 @@
 - 2차 저장창치인 **SSD, HDD** 등에 **파일 형식**으로 데이터 저장.
 > FAT, NTFS, EXT2, JFS, XFS 등 많은 파일 시스템 존재.
 #### 네트워킹
+- 네트워크 프로토콜 지원을 통한 컴퓨터 네트워크 관리.
+- TCP/IP 기반의 컴퓨터 간 통신 지원.
+- 인터넷 연결 및 데이터 전송, 네트워크 보안 등을 담당.
 #### 오류 처리
+- 시스템 내부 및 외부에서 발생하는 오류 상황 처리.
+> 프로세스의 비정상 종료, 메모리 오버플로우, 입출력 오류 등
 #### 시스템 보안
+- 접근 제어, 사용자 인증, 암호화 등의 기능 제공.
+#### 소프트웨어 인터페이스 제공
+- 사용자가 운영체제를 편리하게 사용하기 위해 제공.
+> **CLI** : 터미널 환경에서의 컴퓨터 시스템 조작.
+> **GUI** : 그래픽 환경에서의 컴퓨터 시스템 조작.
 <br>
 
 
